[gd_scene load_steps=23 format=2]

[ext_resource path="res://theme/focus.tres" type="StyleBox" id=1]
[ext_resource path="res://font_/MusticaPro-SemiBold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://theme/normal.tres" type="StyleBox" id=3]
[ext_resource path="res://theme/panel_background3.tres" type="StyleBox" id=4]
[ext_resource path="res://theme/titleBackground.tres" type="StyleBox" id=5]
[ext_resource path="res://script/terminal.gd" type="Script" id=6]
[ext_resource path="res://theme/panel_background2.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/panel_background1.tres" type="StyleBox" id=9]
[ext_resource path="res://theme/syst_theme.tres" type="Theme" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.176471, 0.00392157, 0.286275, 1 )

[sub_resource type="DynamicFont" id=7]
size = 33
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 43
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=12]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 35
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 23
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.223529, 0.0431373, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.223529, 0.0431373, 0.392157, 1 )

[node name="Terminal_Popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 55.0
margin_top = 69.0
margin_right = -63.0
margin_bottom = -80.0
rect_min_size = Vector2( 208, 216 )
script = ExtResource( 6 )

[node name="MainWindow" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -5.0
margin_bottom = 12.0
rect_min_size = Vector2( 216, 216 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )

[node name="tittleBar" type="Panel" parent="MainWindow"]
anchor_right = 1.0
margin_bottom = 33.443
rect_min_size = Vector2( 200, 33.443 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 5 )

[node name="Tittle" type="Label" parent="MainWindow/tittleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_bottom = 4.557
rect_min_size = Vector2( 176, 32 )
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 7 )
text = "GnuChan Terminal Beta 000000.1"
align = 1
valign = 1

[node name="close" type="Button" parent="MainWindow/tittleBar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
margin_top = -13.0
margin_right = -6.0
margin_bottom = 8.557
rect_min_size = Vector2( 22.664, 33.255 )
input_pass_on_modal_close_click = false
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 9 )
text = "X"

[node name="bottomBar" type="Control" parent="MainWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 53.0
margin_right = -9.0
margin_bottom = -13.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="inputBackground" type="Panel" parent="MainWindow/bottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 614.0
margin_bottom = 1.0

[node name="background" type="Panel" parent="MainWindow/bottomBar/inputBackground"]
anchor_left = -0.001
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.143
margin_bottom = 12.0
custom_styles/panel = ExtResource( 4 )

[node name="background2" type="Panel" parent="MainWindow/bottomBar/inputBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 255.0
margin_right = 9.0
margin_bottom = 12.0
custom_styles/panel = ExtResource( 7 )

[node name="background3" type="Panel" parent="MainWindow/bottomBar/inputBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = 21.0
margin_right = 9.0
margin_bottom = 4.0
custom_styles/panel = ExtResource( 1 )

[node name="input" type="LineEdit" parent="MainWindow/bottomBar/inputBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 239.0
margin_top = 29.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
caret_blink = true

[node name="Label" type="Label" parent="MainWindow/bottomBar/inputBackground"]
margin_left = 15.0
margin_top = 29.0
margin_right = 239.0
margin_bottom = 81.0
custom_colors/font_color = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 11 )
text = "User  Name :-"

[node name="bg_otp" type="Panel" parent="MainWindow/bottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -5.0
margin_right = -8.0
margin_bottom = -99.0
custom_styles/panel = ExtResource( 9 )

[node name="output" type="TextEdit" parent="MainWindow/bottomBar/bg_otp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -8.0
theme = ExtResource( 10 )
custom_colors/font_color_readonly = Color( 0.615686, 0.305882, 0.866667, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/read_only = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
readonly = true
bookmark_gutter = true
smooth_scrolling = true
minimap_width = 100
caret_blink = true

[connection signal="pressed" from="MainWindow/tittleBar/close" to="." method="_on_close_pressed"]
